admission/ValidatingAdmissionPolicy/policies/apparmor-profile/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-profile-pod-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 8b12778b-4d66-5b41-a3a5-fc73263509b2
  labels:
    apparmor-profile-pod.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    apparmor-profile-pod.security.kolteq.com/audit: 'false-true'
    apparmor-profile-pod.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-profile-pod
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: apparmor-profile-pod.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-profile-pod-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 8b12778b-4d66-5b41-a3a5-fc73263509b2
  labels:
    apparmor-profile-pod.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/warn: enabled
    apparmor-profile-pod.security.kolteq.com/audit: 'false-true'
    apparmor-profile-pod.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: apparmor-profile-pod
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: apparmor-profile-pod.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-profile-pod-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 8b12778b-4d66-5b41-a3a5-fc73263509b2
  labels:
    apparmor-profile-pod.security.kolteq.com/warn: 'false-true'
    apparmor-profile-pod.security.kolteq.com/audit: 'false-true'
    apparmor-profile-pod.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-profile-pod
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: apparmor-profile-pod.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-profile-pod-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 8b12778b-4d66-5b41-a3a5-fc73263509b2
  labels:
    apparmor-profile-pod.security.kolteq.com/audit: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    apparmor-profile-pod.security.kolteq.com/enforce: 'false-true'
    apparmor-profile-pod.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-profile-pod
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: apparmor-profile-pod.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-profile-pod-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 8b12778b-4d66-5b41-a3a5-fc73263509b2
  labels:
    apparmor-profile-pod.security.kolteq.com/audit: 'false-true'
    security.kolteq.com/audit: enabled
    apparmor-profile-pod.security.kolteq.com/enforce: 'false-true'
    apparmor-profile-pod.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-profile-pod
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: apparmor-profile-pod.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-profile-pod-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 8b12778b-4d66-5b41-a3a5-fc73263509b2
  labels:
    apparmor-profile-pod.security.kolteq.com/audit: 'false-true'
    apparmor-profile-pod.security.kolteq.com/enforce: 'false-true'
    apparmor-profile-pod.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-profile-pod
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: apparmor-profile-pod.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-profile-pod-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 8b12778b-4d66-5b41-a3a5-fc73263509b2
  labels:
    apparmor-profile-pod.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    apparmor-profile-pod.security.kolteq.com/audit: 'false-true'
    apparmor-profile-pod.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-profile-pod
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: apparmor-profile-pod.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-profile-pod-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 8b12778b-4d66-5b41-a3a5-fc73263509b2
  labels:
    apparmor-profile-pod.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/enforce: enabled
    apparmor-profile-pod.security.kolteq.com/audit: 'false-true'
    apparmor-profile-pod.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-profile-pod
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: apparmor-profile-pod.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-profile-pod-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 8b12778b-4d66-5b41-a3a5-fc73263509b2
  labels:
    apparmor-profile-pod.security.kolteq.com/enforce: 'false-true'
    apparmor-profile-pod.security.kolteq.com/audit: 'false-true'
    apparmor-profile-pod.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-profile-pod
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: apparmor-profile-pod.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
